Update swagger API doc for config API
